fix styling for homepage on Safari

--- a/src/layout/Footer.module.scss
+++ b/src/layout/Footer.module.scss
@@ -52,7 +52,7 @@ footer.container {
   .bottom {
     background: white;
     color: black;
-    margin: 0 -1.5rem;
+    margin: 0;
     min-height: 150px;
     text-align: center;
     display: flex;
